# lambdaG-case-study-DH2025

./: .gitignore  Makefile  README.md  pyproject.toml
data/demo/: claims.csv  train.csv
lambda_g/: __init__.py  faithful_model.py  model.py  ngram_lm.py  posnoise.py
scripts/: run_lambda_g.py
tests/: test_faithful_lambda_g.py  test_lambda_g.py
